--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Minha pagina</title>
-        <script src="main.js"></script>
+        <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
     </head>
     <body>
         <button type="button">Clique aqui!</button>
