--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
     </head>
     <body>
-        <button type="button">Clique aqui!</button>
+        <button type="button" onclick="consultaCEP">Clique aqui!</button>
     </body>
 </html>
