Terminado apontamentos para os arquivos javascript em index

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Minha pagina</title>
-        <script type="text/javascript" src="main.js"></script>
-        <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
     </head>
     <body>
         <button type="button" onclick="consultaCEP">Clique aqui!</button>
