--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <title>Minha pagina</title>
         <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
     </head>
     <body>
-        <button type="button" onclick="consultaCEP">Clique aqui!</button>
+        <button type="button" onclick="consultaCEP()">Clique aqui!</button>
     </body>
 </html>
