Adicionado tag input ao arquivo index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
     </head>
     <body>
+        <input id = "CEP" >
         <button type="button" onclick="consultaCEP()">Clique aqui!</button>
     </body>
 </html>
