Adicionado tag p ao arquivo index, e modificado arquivo main.js

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <body>
         <input id = "CEP" >
         <button type="button" onclick="consultaCEP()">Clique aqui!</button>
+        <p id = "logradouro"></p>
     </body>
 </html>
