Adicionados tags bairro, localidade, UF e adicionados funcionalidades respectivas em function consultaCEP no arquivo mains.js

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         <input id = "CEP" >
         <button type="button" onclick="consultaCEP()">Clique aqui!</button>
         <p id = "logradouro"></p>
+        <p id = "bairro"></p>
+        <p id = "localidade"></p>
+        <p id = "UF"></p>
+
     </body>
 </html>
